Внес исправления в соотвествии с полученными замечаниями.